--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "lodash": "^4.17.19",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
+    "vue-stripe-checkout": "^3.5.7",
     "vue2-google-maps": "^0.10.7",
     "vuex": "^3.4.0"
   },
